--- a/.github/workflows/get_data.yml
+++ b/.github/workflows/get_data.yml
@@ -1,8 +1,8 @@
 on:
   schedule:
-    - cron: "0 * * * *"
-	
-	jobs:
+    - cron: "5 * * * *"
+
+jobs:
   generate-data:
     runs-on: ${{ matrix.config.os }}
 
@@ -48,16 +48,23 @@ on:
         run: |
           remotes::install_deps(dependencies = TRUE)
         shell: Rscript {0}
-		
-		- name: Generate data
+          
+      - name: Generate data
         run: |
           source("data_elaboration.R")
         shell: Rscript {0} 
-		
-		- name: Commit files
+        
+      - name: Commit files
         run: |
           git config --local user.email "actions@github.com"
           git config --local user.name "GitHub Actions"
           git add --all
           git commit -am "add data"
           git push 
+
+      - name: Session info
+        run: |
+          options(width = 100)
+          pkgs <- installed.packages()[, "Package"]
+          sessioninfo::session_info(pkgs, include_base = TRUE)
+        shell: Rscript {0}
