--- a/.github/workflows/download_data.yml
+++ b/.github/workflows/download_data.yml
@@ -4,7 +4,7 @@ name: download_data
 # Controls when the action will run.
 on:
   schedule:
-    - cron:  '15 * * * *' 
+    - cron:  "*/5 * * * *"
 
 
 jobs: 
