--- a/.github/workflows/download_data.yml
+++ b/.github/workflows/download_data.yml
@@ -29,7 +29,7 @@ jobs:
                 
     # Run R script
     - name: Data_collect
-      run: Rscript data_collection.R
+      run: Rscript data_elaboration.R
       
  # Add new files in data folder, commit along with other modified files, push
     - name: Commit files
