--- a/.github/workflows/download_data.yml
+++ b/.github/workflows/download_data.yml
@@ -27,6 +27,7 @@ jobs:
         R -e 'install.packages("sf")'
         R -e 'install.packages("data.table")'
         R -e 'install.packages("zoo")'
+        R -e 'install.packages("reshape2")'
                 
     # Run R script
     - name: Data_collect
