--- a/.github/workflows/download_data.yml
+++ b/.github/workflows/download_data.yml
@@ -36,11 +36,11 @@ jobs:
  # Add new files in data folder, commit along with other modified files, push
     - name: Commit files
       run: |
-        git config --local user.name actions-user
-        git config --local user.email "actions@github.com"
+        git config --local user.name fpmassam
+        git config --local user.email "francesco.picinelli@gmail.com"
         git add data/*
         git commit -am "GH ACTION Headlines $(date)"
         git push origin main
       env:
         REPO_KEY: ${{secrets.GITHUB_TOKEN}}
-        username: github-actions
+        username: fpmassam
