--- a/.github/workflows/test_no_data.yml
+++ b/.github/workflows/test_no_data.yml
@@ -38,6 +38,7 @@ jobs:
       run: |
         git config --local user.name fpmassam
         git config --local user.email "francesco.picinelli@gmail.com"
+        git add data/*
         git commit -am "R_workspace"
         git push origin main
       env:
